--- a/src/bandwidthBroker/Networks.properties
+++ b/src/bandwidthBroker/Networks.properties
@@ -1,3 +1,9 @@
+# A network has to be written as the example below
+#
+# [index] [network IP@]/[mask]
+#
+# 1 10.10.10.10/24
+
 1 10.0.0.0/8
 2 192.0.0.0/24
 3 193.0.0.0/24
