--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ sourceSets {
             srcDirs = ['src/main/java']
         }
         kotlin {
-            srcDirs = ['src/main/kotlin']
+            srcDirs = ['src/main/java', 'src/main/kotlin']
         }
         resources {
             srcDirs = ['src/main/resources']
@@ -48,7 +48,7 @@ sourceSets {
             srcDirs = ['src/test/java']
         }
         kotlin {
-            srcDirs = ['src/test/kotlin']
+            srcDirs = ['src/main/java', 'src/main/kotlin']
         }
         resources {
             srcDirs = ['src/test/resources']
@@ -64,10 +64,14 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "11"
 }
 
+// application {
+//     // Define the main class for the application.
+//     mainClass = 'bandwidthBroker.Main'
+// }
 application {
-    // Define the main class for the application.
-    mainClass = 'bandwidthBroker.Main'
-}
+     mainClass = 'bandwidthBroker.Main'
+ }
+
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
