change net and sla

--- a/app/src/main/resources/bandwidthBroker/SLAs.properties
+++ b/app/src/main/resources/bandwidthBroker/SLAs.properties
@@ -23,3 +23,15 @@ bandwidthBE_192.0.0.0/24_up 1
 bandwidthBE_192.0.0.0/24_down 1
 bandwidthPREMIUM_192.0.0.0/24_up 2
 bandwidthPREMIUM_192.0.0.0/24_down 2
+
+Router_193.168.1.0/24 192.0.0.254
+bandwidthBE_193.168.1.0/24_up 1
+bandwidthBE_193.168.1.0/24_down 1
+bandwidthPREMIUM_193.168.1.0/24_up 2
+bandwidthPREMIUM_193.168.1.0/24_down 2
+
+Router_193.168.2.0/24 192.0.0.254
+bandwidthBE_193.168.2.0/24_up 1
+bandwidthBE_193.168.2.0/24_down 1
+bandwidthPREMIUM_193.168.2.0/24_up 2
+bandwidthPREMIUM_193.168.2.0/24_down 2
