--- a/app/src/main/java/bandwidthBroker/SLAs.properties
+++ b/app/src/main/java/bandwidthBroker/SLAs.properties
@@ -12,14 +12,21 @@
 # bandwidthPREMIUM_10.10.10.10/24_up 2
 # bandwidthPREMIUM_10.10.10.10/24_down 2
 
-Router_10.0.0.0/8 10.0.0.255
-bandwidthBE_10.0.0.0/8_up 1
-bandwidthBE_10.0.0.0/8_down 1
-bandwidthPREMIUM_10.0.0.0/8_up 2
-bandwidthPREMIUM_10.0.0.0/8_down 2
+# Router_10.0.0.0/8 10.0.0.255
+# bandwidthBE_10.0.0.0/8_up 1
+# bandwidthBE_10.0.0.0/8_down 1
+# bandwidthPREMIUM_10.0.0.0/8_up 2
+# bandwidthPREMIUM_10.0.0.0/8_down 2
 
-Router_192.0.0.0/24 192.0.0.254
-bandwidthBE_192.0.0.0/24_up 1
-bandwidthBE_192.0.0.0/24_down 1
-bandwidthPREMIUM_192.0.0.0/24_up 2
-bandwidthPREMIUM_192.0.0.0/24_down 2
+
+Router_193.168.1.0/24 193.168.1.254
+bandwidthBE_193.168.1.0/24_up 6
+bandwidthBE_193.168.1.0/24_down 6
+bandwidthPREMIUM_193.168.1.0/24_up 1
+bandwidthPREMIUM_193.168.1.0/24_down 1
+
+Router_193.168.2.0/24 193.168.2.254
+bandwidthBE_193.168.2.0/24_up 6
+bandwidthBE_193.168.2.0/24_down 6
+bandwidthPREMIUM_193.168.2.0/24_up 1
+bandwidthPREMIUM_193.168.2.0/24_down 1
